@@ -1,3 +1,7 @@
+[B]Version 2.8.2[/B]
+
+- Manage Queue & Subscription support
+
 [B]Version 2.8.0[/B]
 
 - initial Queue & Subscription support
